--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "webpack": "1.13.0",
     "webpack-dev-middleware": "1.6.1",
     "webpack-hot-middleware": "2.10.0",
-    "react-prototype": "^^15.5.7"
+    "prop-types": "^15.6.0"
   },
   "repository": {
     "type": "git",
